--- a/index.html
+++ b/index.html
@@ -16,34 +16,36 @@
       <div class="container tests">
         <div class="content result">
           <h3 class="l-lavander">Your Result</h3>
-          <h1>76</h1>
-          <p class="l-lavander">of 100</p>
+          <div class="circle">
+            <h1>76</h1>
+            <p class="l-lavander">of 100</p>
+          </div>
           <h2>Great</h2>
           <p class="l-lavander">
             You scored higher than 65% of the people who have taken these tests.
           </p>
         </div>
         <div class="content summary">
-          <h3>Summary</h3>
-          <ul>
-            <ul>
-              <li>Reaction</li>
-              <li>80 / 100</li>
+          <h3 class="d-g-blue">Summary</h3>
+          <ul class="lists">
+            <ul class="list reaction">
+              <li class="l-red">Reaction</li>
+              <li class="d-g-blue hundred">80</li>
             </ul>
-            <ul>
-              <li>Memory</li>
-              <li>92 / 100</li>
+            <ul class="list memory">
+              <li class="o-yellow">Memory</li>
+              <li class="d-g-blue hundred">92</li>
             </ul>
-            <ul>
-              <li>Verbal</li>
-              <li>61 / 100</li>
+            <ul class="list verbal">
+              <li class="t-green">Verbal</li>
+              <li class="d-g-blue hundred">61</li>
             </ul>
-            <ul>
-              <li>Visual</li>
-              <li>72 / 100</li>
+            <ul class="list visual">
+              <li class="c-blue">Visual</li>
+              <li class="d-g-blue hundred">72</li>
             </ul>
           </ul>
-          <a href="#" class="btn">Continue</a>
+          <a href="#" class="btn d-g-blue">Continue</a>
         </div>
       </div>
     </section>
@@ -51,7 +53,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Kevin Zugasti</a>.
     </div>
   </footer>
 </body>
